<resources>
    <string name="app_name">Calculadora</string>
    <string name="textGeral">0</string>
    <string name="text1">1</string>
    <string name="text2">2</string>
    <string name="text3">3</string>
    <string name="text4">4</string>
    <string name="text5">5</string>
    <string name="text6">6</string>
    <string name="text7">7</string>
    <string name="text8">8</string>
    <string name="text9">9</string>
    <string name="textSoma">+</string>
    <string name="textSub">-</string>
    <string name="textMulti">*</string>
    <string name="textEqual">=</string>
    <string name="textDiv">/</string>
    <string name="textClear">CE</string>
    <string name="textApagar">Del</string>
    <string name="textPonto">.</string>
    <string name="textEquals">=</string>
    <string name="text0">0</string>
</resources>